# calhacks25

./: .gitignore  Cargo.toml  README.docx  README.md  diff.txt  diff1.txt  duck.db.wal  duck2.db.wal  example.csv  flake.nix  judges.json  log.txt  queries-rohan.json  queries.json  query_profile.json  test_cols.rs  test_persistent_database.sh
.cargo/: config.toml
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 4ikslg8bx1bd9ks7c579x9rz4qz41abi-source  5j6j2xx5z3bzaaxwlmf3qc2mp8d6a5mb-source  71xlap8g2g6v1anf5yagiv7hzpq76imb-source  as801dvx19yglbi7m2iav47dz6jqja0i-source  i71mwlavkx6rs6gly3y97aq7n58z1csb-source  kwnap8ji6g7zklkyv0l0564rz8l0wlmv-source  x99n0iwngnwi7i29sr098xy6z83fi3zd-source  y9w6p7vfk7ix4aan838r952hzqx2b0pa-source
src/: data_loader.rs  hardware.rs  lib.rs  main.rs  mv.rs  planner.rs  preprocessor.rs  profiler.rs  query_executor.rs  query_handler.rs  query_parser.rs  result_checker.rs  result_handler.rs  sql_assembler.rs
