[package]
name = "calhacks"
version = "0.1.0"
edition = "2024"

[profile.release]
# Maximum optimization level
opt-level = 3
# Enable link-time optimization (LTO)
lto = "thin"
# Reduce codegen units for better optimization
codegen-units = 1
# Enable panic = "abort" for smaller binaries and better performance
panic = "abort"
# Strip debug symbols for smaller binaries
strip = true
# Enable overflow checks in debug, disable in release for performance
overflow-checks = false

[profile.profiling]
# Inherit from release but with profiling-friendly settings
inherits = "release"
# Keep debug symbols for readable flamegraphs
strip = false
# Disable LTO to preserve function boundaries
lto = false
# Use more codegen units to preserve function boundaries
codegen-units = 16
# Keep maximum optimization level
opt-level = 3


[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
clap = { version = "4.5.50", features = ["derive"] }
csv = "1.3"
duckdb = "1.4.1"
indicatif = "0.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
